--- a/style.css
+++ b/style.css
@@ -61,8 +61,7 @@ p {
 .img1 {
 	height: 300px;
 	width: 300px;
-	position: relative;
-    top: 100px;
+	position:absolute;
 }
 .img2 {
 	height: 300px;
@@ -115,7 +114,7 @@ p {
 }
 .inner-content {
 	background-image:linear-gradient(to right,#FF8C00, #FFA500, #FFD700, #FFFF00);
-	min-height: 700px;
+	min-height: 875px;
 }
 .sidebar {
 	float: left;
@@ -123,7 +122,7 @@ p {
 }
 .inner-sidebar {
 	background-image:linear-gradient(to right,#FFFF00, #FFD700, #FFA500, #FF8C00);
-	min-height: 700px;
+	min-height: 875px;
 }
 .inner-footer {
 	background-image:linear-gradient(to right,#FF8C00, #FFA500, #FFD700, #FFFF00);
@@ -147,4 +146,53 @@ p {
 .menu a:hover {
     background: red;
     color: black;
+}
+@media (max-width: 600px) {
+	.content { 
+	width: 100%;
+	}
+	.sidebar {
+		width: 100%;
+	}
+	.img1 {
+	height: 100px;
+	width: 100px;
+	position:absolute;
+    left: 10px;
+    }
+	.img2 {
+	height: 200px;
+	width: 300px;
+	position:relative;
+	left: 150px; 
+    }
+    .img3 {
+	height: 200px;
+	width: 300px;
+	position:relative;
+	left: 150px;
+    }
+    .img4 {
+	height: 200px;
+	width: 300px;
+	position:relative;
+	left: 150px;
+    }
+    .img5 {
+	height: 200px;
+	width: 300px;
+	position:relative;
+	left: 150px;
+    }
+    .inner-header {
+    	width: 600px;
+    	height: 350px;
+    }
+    .menu {
+	height: 50px;
+    }
+    .menu a {
+	padding: 0 20px;
+	font-size:25px;
+    }
 }
